<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.grossum.locationapitester.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <EditText
                        android:id="@+id/et_frequency"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/interval_ms"
                        android:inputType="numberDecimal"
                        android:textSize="@dimen/text_et_interval" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <EditText
                        android:id="@+id/et_frequency_max"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/fastest_interval_ms"
                        android:inputType="numberDecimal"
                        android:textSize="@dimen/text_et_interval" />

                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/priority" />

                <Spinner
                    android:id="@+id/sp_priority"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="@dimen/common_padding_large"
                    android:paddingTop="@dimen/common_padding_large"
                    android:layout_marginLeft="@dimen/common_padding_medium"
                    android:layout_marginRight="@dimen/common_padding_small"/>
            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/btn_apply_settings"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:enabled="false"
            android:alpha="@dimen/disable_view_alpha"
            android:background="@color/colorPrimary"
            android:textColor="@android:color/white"
            android:layout_marginLeft="@dimen/common_padding_medium"
            android:layout_weight="1"
            android:text="@string/apply_settings" />
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/common_padding_medium"
        android:layout_weight="1">

        <LinearLayout
            android:id="@+id/cnt_logs"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_ideal_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="Ideal location: - "
                android:textSize="@dimen/text_medium" />

            <TextView
                android:id="@+id/tv_text"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginTop="@dimen/common_padding_xxlarge"
                android:layout_weight="1"
                android:scrollbars="vertical"
                android:textSize="@dimen/common_padding_large" />
        </LinearLayout>

        <FrameLayout
            android:id="@+id/cnt_map"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <fragment xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:id="@+id/map"
                android:name="com.google.android.gms.maps.SupportMapFragment"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </FrameLayout>
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/common_padding_medium"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_get_last_loc"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="@dimen/text_xxsmall"
            android:background="@color/colorPrimary"
            android:textColor="@android:color/white"
            android:text="@string/get_last_known_location" />

        <Button
            android:id="@+id/btn_start_stop_update"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="@dimen/common_padding_large"
            android:textSize="@dimen/text_xxsmall"
            android:background="@color/colorPrimary"
            android:textColor="@android:color/white"
            android:text="@string/start_updating" />
    </LinearLayout>

</LinearLayout>
